# SlapThatLikeButton-TestingStarterProject

./: LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/slapping/: slap_that_like_button.py
tests/: conftest.py  test_slapping.py
