[metadata]
name = slapping
description = slap that like button
author = James Murphy
license = MIT
license_files = LICENSE,
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    slapping
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.982
    flake8>=5.0
    tox>=3.26

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160